Fixed h1 overflowing text in mobile view.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -136,6 +136,11 @@ div .boxempty > h2 {
 /* Navigation (ALL) */
 
 @media (max-width: 549px){
+
+  #root > header > h1 {
+    font-size: 1.5em;
+  }
+
   .hidden--mobile {
     display: none !important;
   }
